--- a/ui/main.html
+++ b/ui/main.html
@@ -4,12 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'none'" />
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
     <title>Verbum Environment</title>
+
+    <style>
+        .window {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            width: 500px;
+            height: 400px;
+            background-color: gray;
+        }
+    </style>
 </head>
 <body>
-    IHS s2
+    
+    Program: <input type="text" id="program" value="thunar" placeholder="program --param" /><br>
+    Resolution: <input type="text" id="resolution" value="500x400" /><br>
+    Program ID: <input type="text" id="program-id" value="" /><br>
+    <button id="open" >open</button>
+    <button id="close" >close</button>
+
+    <div class="window" id="window-id-1" ></div>
+
+    <!-- Libraries. -->
+    <script src='./libraries/jquery/jquery-3.6.3.min.js' ></script>
+
+    <!-- Module: native apps. -->
+    <script src='./native-app/main.js' ></script>
+
+    <!-- Main script. -->
+    <script src='./main.js' ></script>
 </body>
 </html>
 
