--- a/ui/main.html
+++ b/ui/main.html
@@ -22,11 +22,12 @@
     
     Program: <input type="text" id="program" value="thunar" placeholder="program --param" /><br>
     Resolution: <input type="text" id="resolution" value="500x400" /><br>
-    Program ID: <input type="text" id="program-id" value="" /><br>
     <button id="open" >open</button>
     <button id="close" >close</button>
+    <button id="reload-content" >reload content</button>
 
-    <div class="window" id="window-id-1" ></div>
+    <div id="window-content" ></div>
+    <!-- <div class="window" id="window-id-1" ></div> -->
 
     <!-- Libraries. -->
     <script src='./libraries/jquery/jquery-3.6.3.min.js' ></script>
