--- a/ui/main.html
+++ b/ui/main.html
@@ -10,12 +10,11 @@
 </head>
 <body>
     
-
     <style>
         .window {
             position: absolute;
             top: 10px;
-            right: 10px;
+            left: 300px;
             width: 500px;
             height: 400px;
             background-color: gray;
@@ -23,10 +22,11 @@
     </style>
     
     Program: <input type="text" id="program" value="thunar" placeholder="program --param" /><br>
-    Resolution: <input type="text" id="resolution" value="500x400" /><br>
+    Resolution: <input type="text" id="resolution" value="400x300" /><br>
+    Program ID: <input type="text" id="program-id" value="" /><br>
     <button id="open" >open</button>
     <button id="close" >close</button>
-    <button id="reload-content" >reload content</button>
+    <button id="change-resolution" >change resolution</button>
 
     <div id="window-content" ></div>
 
